Fixed toggler and schedule button on mobile device screen issue

--- a/src/components/NavbarToggler/NavbarToggler.scss
+++ b/src/components/NavbarToggler/NavbarToggler.scss
@@ -6,6 +6,7 @@
     background-size: cover;
     align-self: center;
     background-color: transparent !important;
+    background-position: center;
     width: 1.5rem;
     height: 1.5rem;
     outline: none;
